deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.anshverma.online
      secretName: aspirants-secret
  rules:
    - host: api.anshverma.online

      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 8080
